objects/child__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Field 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Field 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Field 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency1__c</fullName>
        <label>Currency Field 1</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency2__c</fullName>
        <label>Currency Field 2</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency3__c</fullName>
        <label>Currency Field 3</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <label>Date Field 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <label>Date Field 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date3__c</fullName>
        <label>Date Field 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime1__c</fullName>
        <label>DateTime Field 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime2__c</fullName>
        <label>DateTime Field 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime3__c</fullName>
        <label>DateTime Field 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <label>Email Field 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>Email Field 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email3__c</fullName>
        <label>Email Field 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EncryptedText__c</fullName>
        <label>Encrypted Text Field</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>GeoLat1__c</fullName>
        <label>Geo Latitude 1</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLat2__c</fullName>
        <label>Geo Latitude 2</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLong1__c</fullName>
        <label>Geo Longitude 1</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLong2__c</fullName>
        <label>Geo Longitude 2</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiPicklist1__c</fullName>
        <label>Multi Picklist Field 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                    <default>true</default>
                    <label>Option1</label>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiPicklist2__c</fullName>
        <label>Multi Picklist Field 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                    <default>true</default>
                    <label>Option1</label>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiPicklist3__c</fullName>
        <label>Multi Picklist Field 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                    <default>true</default>
                    <label>Option1</label>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number1__c</fullName>
        <label>Number Field 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number2__c</fullName>
        <label>Number Field 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number3__c</fullName>
        <label>Number Field 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent1__c</fullName>
        <label>Percent Field 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent2__c</fullName>
        <label>Percent Field 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent3__c</fullName>
        <label>Percent Field 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone Field 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>Phone Field 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone3__c</fullName>
        <label>Phone Field 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist1__c</fullName>
        <label>Picklist Field 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                    <default>true</default>
                    <label>Option1</label>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist2__c</fullName>
        <label>Picklist Field 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                    <default>true</default>
                    <label>Option1</label>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist3__c</fullName>
        <label>Picklist Field 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                    <default>true</default>
                    <label>Option1</label>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <label>Text Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Text Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text3__c</fullName>
        <label>Text Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time1__c</fullName>
        <label>Time Field 1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Time2__c</fullName>
        <label>Time Field 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>URL1__c</fullName>
        <label>URL Field 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL2__c</fullName>
        <label>URL Field 2</label>
        <type>Url</type>
    </fields>
    <label>child</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>childs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>